# jarvis

./: .gitignore  Makefile  README.md  pyproject.toml
api/: main.py
api/services/agent/: initialise.py  router.py
api/services/chat/: router.py
api/src/: prompts.py  pydantic.py  settings.py
api/src/agents/: __init__.py  base.py  github.py  registry.py
api/src/azure/: __init__.py  credentials.py
api/src/mcp/: __init__.py  base.py
api/src/messages/: __init__.py  create.py  message.py
api/src/openai/: client.py  tools.py
api/src/tools/: base.py  registry.py
api/src/utils/: options.py
api/v1/: router.py
jarvis/: backend.ts  metadata.ts  next.config.ts  package-lock.json  package.json
jarvis/app/: ChatProvider.tsx  globals.css  layout.tsx  page.tsx
jarvis/app/[id]/: page.tsx
jarvis/app/_components/: Badge.tsx  SafeImage.tsx  Skeleton.tsx  Spinner.tsx
jarvis/app/_components/chat/: ChatContainer.tsx  IconWrapper.tsx  Input.tsx  Message.tsx  Response.tsx  Run.tsx  RunState.tsx
jarvis/app/_components/layout/: Card.tsx  Container.tsx  Content.tsx  Loading.tsx
jarvis/app/_components/nav/: NavBar.tsx  NavLink.tsx
jarvis/app/_components/theme/: Theme.tsx  ThemeProvider.tsx
jarvis/app/agents/: page.tsx
jarvis/app/agents/[id]/: loading.tsx  page.tsx
jarvis/app/agents/[id]/_components/: AgentCapabilitiesCard.tsx  AgentCard.tsx  AgentInputOutputCard.tsx  AgentProviderCard.tsx  AgentSkillCard.tsx  AgentSummaryCard.tsx
jarvis/app/styles/: icon.css  nav.css  table.css
jarvis/config/: image.ts
jarvis/hooks/: useNavigation.tsx
jarvis/types/: agents.d.ts  message.d.ts  nav.d.ts
jarvis/utils/: backendUtils.ts  gravatarUtils.ts  iconUtils.ts  stream.ts  streamUtils.ts  toolUtils.ts
